bluetooth network support

--- a/regstat.cabal
+++ b/regstat.cabal
@@ -28,8 +28,8 @@ Library
                    base>4, mtl>2, directory, filepath,
                    cmdargs, 
                    split, 
+                   aeson > 0.6,
                    text, 
-                   aeson >= 0.6, 
                    unordered-containers,
                    transformers >= 0.3, 
                    HStringTemplate,
