remove HStringTemplateHelpersIW dep

--- a/regstat.cabal
+++ b/regstat.cabal
@@ -32,8 +32,9 @@ Library
                    text, 
                    unordered-containers,
                    transformers >= 0.3, 
+                   fficxx, 
                    HStringTemplate,
-                   HStringTemplateHelpersIW, 
+                   -- HStringTemplateHelpersIW, 
                    configurator,
                    kvstore-client,
                    http-types,
